Bug Fix: Encoding on exported HTML pages wasn't UTF-8 by default in some browsers

--- a/Language Pad/LanguagePad.vbproj
+++ b/Language Pad/LanguagePad.vbproj
@@ -368,6 +368,7 @@
     <None Include="Resources\Suprasegmentals.txt" />
     <None Include="Resources\Cyrillic.txt" />
     <None Include="Resources\Greek.txt" />
+    <None Include="Resources\PageExportHtml.txt" />
     <Content Include="Version10Icon.ico" />
     <Content Include="Version9Icon.ico" />
   </ItemGroup>
