--- a/src/LangPad/packages.config
+++ b/src/LangPad/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="RtfPipe" version="1.0.7092.25824" targetFramework="net472" />
+  <package id="Autoupdater.NET.Official" version="1.6.0" targetFramework="net48" />
+  <package id="RtfPipe" version="1.0.7388.1242" targetFramework="net48" />
 </packages>
