--- a/src/LangPad/packages.config
+++ b/src/LangPad/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autoupdater.NET.Official" version="1.6.0" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.23" targetFramework="net48" />
+  <package id="ReverseMarkdown" version="3.11.0" targetFramework="net48" />
   <package id="RtfPipe" version="1.0.7388.1242" targetFramework="net48" />
 </packages>
