Less jumping around when moving pages

--- a/src/LangPad/LangPad.vbproj
+++ b/src/LangPad/LangPad.vbproj
@@ -234,6 +234,7 @@
     <Compile Include="CharacterButton.vb">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Util.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="CharacterEditorToolWindow.resx">
