--- a/src/LangPad/LangPad.vbproj
+++ b/src/LangPad/LangPad.vbproj
@@ -121,7 +121,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppAppearance.vb" />
+    <Compile Include="AppTheme.vb" />
     <Compile Include="AppLoad.vb" />
     <Compile Include="Converters\KeyValueConverter.vb" />
     <Compile Include="NotebookController.vb" />
@@ -364,12 +364,12 @@
   <ItemGroup>
     <PublishFile Include="AppIcon.ico">
       <Visible>False</Visible>
+      <PublishState>Exclude</PublishState>
+      <IncludeHash>True</IncludeHash>
       <Group>
       </Group>
       <TargetPath>
       </TargetPath>
-      <PublishState>Exclude</PublishState>
-      <IncludeHash>True</IncludeHash>
       <FileType>File</FileType>
     </PublishFile>
   </ItemGroup>
