--- a/src/LangPad/LangPad.vbproj
+++ b/src/LangPad/LangPad.vbproj
@@ -124,6 +124,7 @@
     <Compile Include="AppTheme.vb" />
     <Compile Include="AppLoad.vb" />
     <Compile Include="Converters\KeyValueConverter.vb" />
+    <Compile Include="Dialogs\Messages.vb" />
     <Compile Include="NotebookController.vb" />
     <Compile Include="AutoUpdater.vb" />
     <Compile Include="CharacterEditorToolWindow.Designer.vb">
