--- a/src/LangPadUI/LangPadUI.csproj
+++ b/src/LangPadUI/LangPadUI.csproj
@@ -67,7 +67,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="RtbStyle.cs" />
-    <Compile Include="Themes\DarkTheme.cs" />
+    <Compile Include="Themes\DesertTheme.cs" />
     <Compile Include="Themes\LightTheme.cs" />
     <Compile Include="Theming\Theme.cs" />
     <Compile Include="Theming\ThemeManager.cs" />
