--- a/src/LangPadUI/LangPadUI.csproj
+++ b/src/LangPadUI/LangPadUI.csproj
@@ -68,7 +68,8 @@
     </Compile>
     <Compile Include="RtbStyle.cs" />
     <Compile Include="Themes\DesertTheme.cs" />
-    <Compile Include="Themes\DefaultTheme.cs" />
+    <Compile Include="Themes\DefaultLightTheme.cs" />
+    <Compile Include="Themes\WhiteoutTheme.cs" />
     <Compile Include="Theming\Theme.cs" />
     <Compile Include="Theming\ThemeManager.cs" />
     <Compile Include="Theming\ThemeMenuRenderer.cs" />
