--- a/src/LangPadUI/LangPadUI.csproj
+++ b/src/LangPadUI/LangPadUI.csproj
@@ -69,6 +69,7 @@
     <Compile Include="RtbStyle.cs" />
     <Compile Include="Themes\DesertTheme.cs" />
     <Compile Include="Themes\DefaultLightTheme.cs" />
+    <Compile Include="Themes\LunaTheme.cs" />
     <Compile Include="Themes\MetallicTheme.cs" />
     <Compile Include="Themes\WhiteoutTheme.cs" />
     <Compile Include="Theming\Theme.cs" />
