--- a/src/LangPadUI/LangPadUI.csproj
+++ b/src/LangPadUI/LangPadUI.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Themes\DesertTheme.cs" />
     <Compile Include="Themes\DefaultLightTheme.cs" />
     <Compile Include="Themes\LunaTheme.cs" />
-    <Compile Include="Themes\MetallicTheme.cs" />
+    <Compile Include="Themes\CoolGrayTheme.cs" />
     <Compile Include="Themes\WhiteoutTheme.cs" />
     <Compile Include="Theming\Theme.cs" />
     <Compile Include="Theming\ThemeManager.cs" />
