--- a/src/LangPad/app.config
+++ b/src/LangPad/app.config
@@ -34,7 +34,7 @@
                 <value>True</value>
             </setting>
             <setting name="Theme" serializeAs="String">
-                <value>Breeze</value>
+                <value>DefaultLight</value>
             </setting>
             <setting name="SmartReplace" serializeAs="String">
                 <value>True</value>
