--- a/src/LangPad/app.config
+++ b/src/LangPad/app.config
@@ -27,14 +27,14 @@
     </system.diagnostics>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" /></startup><userSettings>
         <LangPad.My.MySettings>
-            <setting name="CustomSymbols" serializeAs="String">
+            <setting name="CustomCharacters" serializeAs="String">
                 <value />
             </setting>
             <setting name="Updates" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="Theme" serializeAs="String">
-                <value>DefaultLight</value>
+                <value>Default Light</value>
             </setting>
             <setting name="SmartReplace" serializeAs="String">
                 <value>True</value>
@@ -50,6 +50,39 @@
             </setting>
             <setting name="DictionaryFontColor" serializeAs="String">
                 <value>Black</value>
+            </setting>
+            <setting name="Setting" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Ctrl0" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Ctrl1" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Ctrl2" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Ctrl3" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Ctrl4" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Ctrl5" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Ctrl6" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Ctrl7" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Ctrl8" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Ctrl9" serializeAs="String">
+                <value />
             </setting>
         </LangPad.My.MySettings>
     </userSettings>
