--- a/src/LangPadUI/LangPadUI.csproj
+++ b/src/LangPadUI/LangPadUI.csproj
@@ -45,6 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccentCheckButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="CharacterButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="FormAppearance.cs" />
     <Compile Include="DoubleBufferedFlowLayoutPanel.cs">
       <SubType>Component</SubType>
@@ -57,6 +63,9 @@
     </Compile>
     <Compile Include="FixedSR.cs" />
     <Compile Include="IconManager.cs" />
+    <Compile Include="IpaToolTip.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
