--- a/src/LangPadUI/LangPadUI.csproj
+++ b/src/LangPadUI/LangPadUI.csproj
@@ -76,6 +76,12 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="RtbStyle.cs" />
+    <Compile Include="ShortcutButton.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ShortcutButton.Designer.cs">
+      <DependentUpon>ShortcutButton.cs</DependentUpon>
+    </Compile>
     <Compile Include="Themes\DesertTheme.cs" />
     <Compile Include="Themes\DefaultLightTheme.cs" />
     <Compile Include="Themes\CoolGrayTheme.cs" />
@@ -95,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ColorButton.resx">
       <DependentUpon>ColorButton.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ShortcutButton.resx">
+      <DependentUpon>ShortcutButton.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
