--- a/src/LangPad/My Project/Settings.settings
+++ b/src/LangPad/My Project/Settings.settings
@@ -9,7 +9,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="Theme" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Default Light</Value>
+      <Value Profile="(Default)">Default</Value>
     </Setting>
     <Setting Name="SmartReplace" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
